[package]
name = "flac_resampler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
claxon = "0.4.3"
dasp = { version = "0.11.0", features =  ["all"] }
dasp_interpolate = "0.11.0"
dasp_sample = "0.11.0"
dasp_signal = "0.11.0"
flac-bound = "0.3.0"
hound = "3.5.0"
rubato = "0.12.0"
samplerate = "0.2.4"
